changed tags to classes, header fixed, portfolio-btn fixed, slider secion fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Studio</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <div class="header-left">
         <h3>
@@ -51,30 +51,30 @@
         <section class="section">
           <div class="container">
           <ul class="list txt-section">
-            <li>
+            <li class="txt-list">
               <h5 class="text-header">LOREM IPSUM</h5>
-              <p>
+              <p class="txt-section-paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="txt-list"> 
               <h5 class="text-header">LOREM IPSUM</h5>
-              <p>
+              <p class="txt-section-paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="txt-list">
               <h5 class="text-header">LOREM IPSUM</h5>
-              <p>
+              <p class="txt-section-paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="txt-list">
               <h5 class="text-header">LOREM IPSUM</h5>
-              <p>
+              <p class="txt-section-paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -120,10 +120,11 @@
             <li>
               <figure class="team-card">
                 <img
+                class="team-img"
                   src="./images/hw_person_1.jpg"
                   alt="Product Designer"
                 />
-                <figcaption>
+                <figcaption class="team-caption">
                   <h4 class="name">John Doe</h4>
                   <p class="role">Product Designer</p>
                 </figcaption>
@@ -132,10 +133,11 @@
             <li>
               <figure class="team-card">
                 <img
+                class="team-img"
                   src="./images/hw_person_2.jpg"
                   alt="Frontend Developer"
                 />
-                <figcaption>
+                <figcaption class="team-caption">
                   <h4 class="name">John Doe</h4>
                   <p class="role">Frontend Developer</p>
                 </figcaption>
@@ -144,10 +146,11 @@
             <li>
               <figure class="team-card">
                 <img
+                class="team-img"
                   src="./images/hw_person_3.jpg"
                   alt="Marketing"
                 />
-                <figcaption>
+                <figcaption class="team-caption">
                   <h4 class="name">John Doe</h4>
                   <p class="role">Marketing</p>
                 </figcaption>
@@ -156,10 +159,11 @@
             <li>
               <figure class="team-card">
                 <img
+                class="team-img"
                   src="./images/hw_person_4.jpg"
                   alt="UI Designer"
                 />
-                <figcaption>
+                <figcaption class="team-caption">
                   <h4 class="name">John Doe</h4>
                   <p class="role">UI Designer</p>
                 </figcaption>
@@ -171,11 +175,11 @@
     </main>
     <footer class="bottom">
       <div class="container">
-        <h3>
+        <h3 class="footer-logo">
           <a href="./index.html" class="logo-footer"><span>Web</span>Studio</a>
         </h3>
         <address class="footer-address">
-          <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+          <p class="footer-paragraph">m. Warszawa, Aleje Jerozolimskie 21</p>
           <a href="mailto:info@devstudio.com" class="link"
             >info@devstudio.com</a
           >
