classes names changed, added class for body

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <title>Studio</title>
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <div class="container">
         <div class="header-left">
@@ -82,7 +82,7 @@
           </ul>
           </div>
         </section>
-        <section class="section what-we-do-background">
+        <section class="section section-no-padding">
           <div class="container what-we-do">
           <h2 class="title">Czym się zajmujemy</h2>
           <ul class="list">
@@ -113,7 +113,7 @@
           </ul>
           </div>
         </section>
-        <section class="section our-team-background">
+        <section class="section section-gray">
           <div class="container our-team">
           <h2 class="title">Nasz zespół</h2>
           <ul class="list">
