--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     />
     <title>Portfolio</title>
   </head>
-  <body>
+  <body class="body">
     <header>
       <div class="container">
         <div class="header-left">
